update alias erorr message and fix z-index for overlay

--- a/public/stylesheets/_partials/_overlay.scss
+++ b/public/stylesheets/_partials/_overlay.scss
@@ -5,6 +5,7 @@
   left: 0;
   background: rgba(0, 0, 0, 0.5);
   overflow: hidden;
+  z-index: 300;
 
   &--call {
 
